[metadata]
name = emergent_in_context_learning
url = "https://github.com/deepmind/emergent_in_context_learning"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = emergent_in_context_learning
install_requires =
    absl-py==1.2.0
    dill==0.3.5.1
    dm-haiku==0.0.7
    jaxline==0.0.5
    ml_collections==0.1.1
    numpy==1.23.2
    optax==0.1.3
    tensorflow==2.9.1
    tensorflow_datasets==4.6.0
